--- a/core/config/src/main/adoc/modules/config/pages/sections/_nav.adoc
+++ b/core/config/src/main/adoc/modules/config/pages/sections/_nav.adoc
@@ -9,6 +9,7 @@
 ** xref:refguide:config:sections/causeway.security.shiro.adoc[Shiro Security Implementation]
 ** xref:refguide:config:sections/causeway.security.keycloak.adoc[Keycloak Security Implementation]
 ** xref:refguide:config:sections/causeway.security.spring.adoc[Spring Security Implementation]
+** xref:refguide:config:sections/causeway.viewer.common.adoc[Common Config for Viewers]
 ** xref:refguide:config:sections/causeway.viewer.restfulobjects.adoc[Restful Objects Viewer]
 ** xref:refguide:config:sections/causeway.viewer.wicket.adoc[Wicket Viewer]
 ** xref:refguide:config:sections/datanucleus.adoc[DataNucleus Configuration]
