ISIS-3276: renames ReatEasy artifact (remove '4' in name)

--- a/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
@@ -39,3 +39,27 @@ The following changed:
 | causeway.viewer.*common*.credit
 
 |===
+
+== Maven Artifacts
+
+The following changed:
+[cols="2a,3a", options="header"]
+
+|===
+
+| previously
+| new
+
+| 
+[source,xml]
+----
+<groupId>org.apache.causeway.viewer</groupId>
+<artifactId>causeway-viewer-restfulobjects-jaxrsresteasy4</artifactId>
+----
+| 
+[source,xml]
+----
+<groupId>org.apache.causeway.viewer</groupId>
+<artifactId>causeway-viewer-restfulobjects-jaxrsresteasy</artifactId>
+----
+|===
