--- a/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
@@ -51,12 +51,14 @@ The following changed:
 | new
 
 | 
+`o.a.c.v.restfulobjects.jaxrsresteasy4.CausewayModuleViewerRestfulObjectsJaxrsResteasy4` from
 [source,xml]
 ----
 <groupId>org.apache.causeway.viewer</groupId>
 <artifactId>causeway-viewer-restfulobjects-jaxrsresteasy4</artifactId>
 ----
-| 
+|
+`o.a.c.v.restfulobjects.jaxrsresteasy.CausewayModuleViewerRestfulObjectsJaxrsResteasy` from 
 [source,xml]
 ----
 <groupId>org.apache.causeway.viewer</groupId>
