ISIS-3222: typo in projection example (docs)

--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/hooks/Property_025-projecting.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/hooks/Property_025-projecting.adoc
@@ -19,9 +19,9 @@ For example:
 public InvoiceSummary {
 
     @Property(
-        projecting = Projecting.PROJECTED   // <.>
+        projecting = Projecting.PROJECTED,  // <.>
         hidden = Where.EVERYWHERE           // <.>
-    }
+    )
     @Getter @Setter
     private Invoice invoice;
 
