--- a/antora/components/refguide-index/modules/applib/pages/index/client/SuppressionType.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/client/SuppressionType.adoc
@@ -13,6 +13,7 @@ enum SuppressionType {
   DOMAIN_TYPE     // <.>
   TITLE     // <.>
   ALL     // <.>
+  EnumSet<SuppressionType> all()
   EnumSet<SuppressionType> setOf(SuppressionType... types)
 }
 ----
