--- a/antora/components/refguide-index/modules/applib/pages/index/services/repository/RepositoryService.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/repository/RepositoryService.adoc
@@ -219,7 +219,7 @@ This method is useful during exploration/prototyping, but - because the filterin
 
 Overload of _#allMatches(Class, Predicate)_ , returns a _page_ of persisted instances of specified type (including subtypes).
 
-If the optional range parameters are used, the dataset returned starts from (0 based) index, and consists of only up to count items.
+If the optional range parameters are used, the dataset considered (before filtering) starts from (0 based) index, runs through up to count items.
 
 [#allMatches_Query]
 === allMatches(Query)
