--- a/antora/components/refguide-index/modules/viewer/pages/index/restfulobjects/client/RestfulClient.adoc
+++ b/antora/components/refguide-index/modules/viewer/pages/index/restfulobjects/client/RestfulClient.adoc
@@ -1,26 +1,26 @@
 = RestfulClient
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-Setup the Restful Client with Basic-Auth:Make a Request and then digest the Response:Maven Setup:
+Setup the Restful Client with Basic-Auth:Make a Request and then digest the Response:
 
 For example:
 
 ----
 
-RestfulClientConfig clientConfig = new RestfulClientConfig();
-clientConfig.setRestfulBase("http://localhost:8080/helloworld/restful/");
-clientConfig.setUseBasicAuth(true); // default = false
-clientConfig.setRestfulAuthUser("sven");
-clientConfig.setRestfulAuthPassword("pass");
-clientConfig.setUseRequestDebugLogging(true); // default = false
+RestfulClientConfig clientConfig = RestfulClientConfig.builder();
+.restfulBase("http://localhost:8080/helloworld/restful/")
+.useBasicAuth(true) // default = false
+.restfulAuthUser("sven")
+.restfulAuthPassword("pass")
+.useRequestDebugLogging(true) // default = false
+.build();
 
 RestfulClient client = RestfulClient.ofConfig(clientConfig);
 ----
 
 ----
- _Builder request = client.request(
-                "services/myService/actions/lookupMyObjectById/invoke",
-                SuppressionType.RO);
+ _Builder request = client.request("services/myService/actions/lookupMyObjectById/invoke")
+    .accept(RestfulClientMediaType.SIMPLE_JSON.mediaTypeFor(MyObject.class, EnumSet.of(SuppressionType.RO)));
 
 Entity args = client.arguments()
         .addActionParameter("id", "12345")
@@ -37,10 +37,6 @@ if(digest.isSuccess()) {
 }
 ----
 
-----
- _org.glassfish.jersey.extjersey-spring52.35_ 
-----
-
 == API
 
 [source,java]
@@ -48,14 +44,27 @@ if(digest.isSuccess()) {
 ----
 class RestfulClient {
   RestfulClient ofConfig(RestfulClientConfig clientConfig)
-  void init(RestfulClientConfig clientConfig)
+  RestfulClient ofConfig(RestfulClientConfig clientConfig, UnaryOperator<ClientBuilder> configRefiner)
   RestfulClientConfig getConfig()
   Client getJaxRsClient()
-  Builder request(String path, SuppressionType... suppressionTypes)
-  Builder request(String path, EnumSet<SuppressionType> suppressionTypes)
+  void close()
+  Builder request(String path)
   ActionParameterListBuilder arguments()
   Try<T> digest(Response response, Class<T> entityType)
   Try<Can<T>> digestList(Response response, Class<T> entityType, GenericType<List<T>> genericType)
+  URI uri(String path)     // <.>
 }
 ----
 
+<.> xref:#uri_String[uri(String)]
++
+--
+Returns an _URI_ constructed from this client's base path plus given relative _path_ .
+--
+
+== Members
+
+[#uri_String]
+=== uri(String)
+
+Returns an _URI_ constructed from this client's base path plus given relative _path_ .
