--- a/antora/components/refguide-index/modules/applib/pages/index/services/grid/GridLoaderService.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/grid/GridLoaderService.adoc
@@ -11,9 +11,9 @@ Provides the ability to load the XML layout (grid) for a domain class.
 interface GridLoaderService {
   boolean supportsReloading()     // <.>
   void remove(Class<?> domainClass)     // <.>
-  boolean existsFor(Class<?> domainClass)     // <.>
-  Grid load(Class<?> domainClass)     // <.>
-  Grid load(Class<?> domainClass, String layout)     // <.>
+  boolean existsFor(Class<?> domainClass, EnumSet<CommonMimeType> supportedFormats)     // <.>
+  Optional<T> load(Class<?> domainClass, String layoutIfAny, GridMarshallerService<T> marshaller)     // <.>
+  Optional<T> load(Class<?> domainClass, GridMarshallerService<T> marshaller)     // <.>
 }
 ----
 
@@ -27,20 +27,20 @@ Whether dynamic reloading of layouts is enabled.
 --
 To support metamodel invalidation/rebuilding of spec.
 --
-<.> xref:#existsFor_Class[existsFor(Class)]
+<.> xref:#existsFor_Class_EnumSet[existsFor(Class, EnumSet)]
 +
 --
 Whether any persisted layout metadata (eg a `.layout.xml` file) exists for this domain class.
 --
-<.> xref:#load_Class[load(Class)]
+<.> xref:#load_Class_String_GridMarshallerService[load(Class, String, GridMarshallerService)]
 +
 --
-Returns a new instance of a xref:refguide:applib:index/layout/grid/Grid.adoc[Grid] for the specified domain class, eg from a `layout.xml` file, else `null` .
+Optionally returns a new instance of a xref:refguide:applib:index/layout/grid/Grid.adoc[Grid] , based on whether the underlying resource could be found, loaded and parsed.
 --
-<.> xref:#load_Class_String[load(Class, String)]
+<.> xref:#load_Class_GridMarshallerService[load(Class, GridMarshallerService)]
 +
 --
-Loads a specic alternative xref:refguide:applib:index/layout/grid/Grid.adoc[Grid] layout for the specified domain class.
+Optionally returns a new instance of a xref:refguide:applib:index/layout/grid/Grid.adoc[Grid] , based on whether the underlying resource could be found, loaded and parsed.
 --
 
 == Members
@@ -59,24 +59,24 @@ To support metamodel invalidation/rebuilding of spec.
 
 This is called by the xref:refguide:applib:index/mixins/metamodel/Object_rebuildMetamodel.adoc[Object_rebuildMetamodel] mixin action.
 
-[#existsFor_Class]
-=== existsFor(Class)
+[#existsFor_Class_EnumSet]
+=== existsFor(Class, EnumSet)
 
 Whether any persisted layout metadata (eg a `.layout.xml` file) exists for this domain class.
 
 If none exists, will return null (and the calling xref:refguide:applib:index/services/grid/GridService.adoc[GridService] will use xref:refguide:applib:index/services/grid/GridSystemService.adoc[GridSystemService] to obtain a default grid for the domain class).
 
-[#load_Class]
-=== load(Class)
+[#load_Class_String_GridMarshallerService]
+=== load(Class, String, GridMarshallerService)
 
-Returns a new instance of a xref:refguide:applib:index/layout/grid/Grid.adoc[Grid] for the specified domain class, eg from a `layout.xml` file, else `null` .
-
-[#load_Class_String]
-=== load(Class, String)
-
-Loads a specic alternative xref:refguide:applib:index/layout/grid/Grid.adoc[Grid] layout for the specified domain class.
+Optionally returns a new instance of a xref:refguide:applib:index/layout/grid/Grid.adoc[Grid] , based on whether the underlying resource could be found, loaded and parsed.
 
 The layout alternative will typically be specified through a `layout()` method on the domain object, the value of which is used for the suffix of the layout file (eg "Customer-layout.archived.xml" to use a different layout for customers that have been archived).
+
+[#load_Class_GridMarshallerService]
+=== load(Class, GridMarshallerService)
+
+Optionally returns a new instance of a xref:refguide:applib:index/layout/grid/Grid.adoc[Grid] , based on whether the underlying resource could be found, loaded and parsed.
 
 include::hooks/GridLoaderService_010-implementation.adoc[]
 
