--- a/antora/components/refguide-index/modules/applib/pages/index/services/menu/MenuBarsLoaderService.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/menu/MenuBarsLoaderService.adoc
@@ -1,9 +1,9 @@
 = MenuBarsLoaderService
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-Returns the xref:refguide:applib:index/layout/menubars/bootstrap/BSMenuBars.adoc[BSMenuBars] instance (bootstrap3-specific subtype of _org.apache.causeway.applib.layout.menubars.MenuBars_ , for the UI.
+Returns the xref:refguide:applib:index/layout/menubars/MenuBars.adoc[MenuBars] instance for the UI.
 
-The default implementation deserializes the `menubars.layout.xml` file read from the classpath.
+The default implementation de-serializes the `menubars.layout...` file read from the classpath.
 
 The service is _called_ by the default implementation of xref:refguide:applib:index/services/menu/MenuBarsService.adoc[MenuBarsService] .
 
@@ -14,7 +14,7 @@ The service is _called_ by the default implementation of xref:refguide:applib:in
 ----
 interface MenuBarsLoaderService {
   boolean supportsReloading()     // <.>
-  BSMenuBars menuBars()     // <.>
+  Optional<T> menuBars(MenuBarsMarshallerService<T> marshaller)     // <.>
 }
 ----
 
@@ -23,10 +23,10 @@ interface MenuBarsLoaderService {
 --
 Whether dynamic reloading of layouts is enabled.
 --
-<.> xref:#menuBars_[menuBars()]
+<.> xref:#menuBars_MenuBarsMarshallerService[menuBars(MenuBarsMarshallerService)]
 +
 --
-Returns a new instance of a xref:refguide:applib:index/layout/menubars/bootstrap/BSMenuBars.adoc[BSMenuBars] if possible, else `null` .
+Optionally returns a new instance of a xref:refguide:applib:index/layout/menubars/MenuBars.adoc[MenuBars] , based on whether the underlying resource could be found, loaded and parsed.
 --
 
 == Members
@@ -38,10 +38,10 @@ Whether dynamic reloading of layouts is enabled.
 
 If not, then the calling xref:refguide:applib:index/services/menu/MenuBarsService.adoc[MenuBarsService] will cache the layout once loaded.
 
-[#menuBars_]
-=== menuBars()
+[#menuBars_MenuBarsMarshallerService]
+=== menuBars(MenuBarsMarshallerService)
 
-Returns a new instance of a xref:refguide:applib:index/layout/menubars/bootstrap/BSMenuBars.adoc[BSMenuBars] if possible, else `null` .
+Optionally returns a new instance of a xref:refguide:applib:index/layout/menubars/MenuBars.adoc[MenuBars] , based on whether the underlying resource could be found, loaded and parsed.
 
 include::hooks/MenuBarsLoaderService_010-implementation.adoc[]
 
