--- a/antora/components/refguide-index/modules/extensions/pages/index/commandreplay/secondary/job/JobExecutionData.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandreplay/secondary/job/JobExecutionData.adoc
@@ -1,17 +1,38 @@
-= WebModuleJaxrsResteasy4
+= JobExecutionData
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-WebModule that provides the RestfulObjects Viewer.
+Requires that the job is annotated with the _org.quartz.PersistJobDataAfterExecution_ annotation.
 
 == API
 
 [source,java]
-.WebModuleJaxrsResteasy4.java
+.JobExecutionData.java
 ----
-class WebModuleJaxrsResteasy4 {
-  WebModuleJaxrsResteasy4(CausewayConfiguration causewayConfiguration, RestEasyConfiguration restEasyConfiguration, ServiceInjector serviceInjector)
-  void prepare(WebModuleContext ctx)
-  Can<ServletContextListener> init(ServletContext ctx)
+class JobExecutionData {
+  String getString(String key, String defaultValue)     // <.>
+  void setString(String key, String value)     // <.>
 }
 ----
 
+<.> xref:#getString_String_String[getString(String, String)]
++
+--
+Lookup property from the job detail.
+--
+<.> xref:#setString_String_String[setString(String, String)]
++
+--
+Save key into the job detail obtained from context.
+--
+
+== Members
+
+[#getString_String_String]
+=== getString(String, String)
+
+Lookup property from the job detail.
+
+[#setString_String_String]
+=== setString(String, String)
+
+Save key into the job detail obtained from context.
